--- a/projectfiles/visualstudio-2015/fbneo_vs2015.vcxproj
+++ b/projectfiles/visualstudio-2015/fbneo_vs2015.vcxproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.props" Condition="Exists('packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.props')" />
+  <Import Project="packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.props" Condition="Exists('packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -1653,13 +1653,13 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.targets" Condition="Exists('packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.targets')" />
+    <Import Project="packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.targets" Condition="Exists('packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.props'))" />
-    <Error Condition="!Exists('packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\vcpkg.C.Users.imapi.Documents.Code.vcpkg.1.0.0\build\native\vcpkg.C.Users.imapi.Documents.Code.vcpkg.targets'))" />
+    <Error Condition="!Exists('packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.props'))" />
+    <Error Condition="!Exists('packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\vcpkg.E.vcpkg.1.0.0\build\native\vcpkg.E.vcpkg.targets'))" />
   </Target>
 </Project>
