--- a/projectfiles/visualstudio-2015/fbneo_vs2015.vcxproj
+++ b/projectfiles/visualstudio-2015/fbneo_vs2015.vcxproj
@@ -345,6 +345,7 @@
     <ClInclude Include="..\..\src\logic\NetCode.h" />
     <ClInclude Include="..\..\src\logic\pb\Message.pb.h" />
     <ClInclude Include="..\..\src\logic\Singleton.h" />
+    <ClInclude Include="..\..\src\logic\utils\callback\callback.h" />
     <ClInclude Include="..\..\src\logic\utils\crc\crc.h" />
     <ClInclude Include="..\..\src\logic\utils\fmt\format.h" />
     <ClInclude Include="..\..\src\logic\utils\fmt\ostream.h" />
@@ -1486,7 +1487,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{86D06C32-A849-4988-A176-A38D014C36C1}</ProjectGuid>
     <RootNamespace>fbneo_vs2015</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>fcadefbneo</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
